--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
             "role": "Developer"
         }
     ],
-    "require": {
-        "php": "^8.2",
-        "filament/forms": "^3.2",
+    "require": {        
+        "php": "^8.1",
+        "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^11.0"
+        "illuminate/contracts": "^10.0|^11.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
