update phpstan and strategy for workflow

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,10 +3,17 @@ includes:
 
 parameters:
     level: 4
+    
     paths:
         - src
         - config
+    
     tmpDir: build/phpstan
+    
     checkOctaneCompatibility: true
+    
     checkModelProperties: true
-    checkMissingIterableValueType: false
+    
+    ignoreErrors:
+        -
+            identifier: missingType.iterableValue
