add error ignore for phpstan

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,3 +13,6 @@ parameters:
     checkOctaneCompatibility: true
     
     checkModelProperties: true
+
+    ignoreErrors:
+        - '#Call to an undefined method Filament\\Forms\\Components\\Component::getName\(\)\.#'
