--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,21 +12,14 @@
     failOnRisky="true"
     failOnEmptyTestSuite="true"
     beStrictAboutOutputDuringTests="true"
-    cacheDirectory=".phpunit.cache"
+    cacheDirectory=".phpunit.result.cache"
     backupStaticProperties="false"
 >
     <testsuites>
-        <testsuite name="VendorName Test Suite">
-            <directory>tests</directory>
+        <testsuite name="Tests">
+            <directory suffix=".php">./tests/</directory>
         </testsuite>
     </testsuites>
-    <coverage>
-        <report>
-            <html outputDirectory="build/coverage"/>
-            <text outputFile="build/coverage.txt"/>
-            <clover outputFile="build/logs/clover.xml"/>
-        </report>
-    </coverage>
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
@@ -35,4 +28,9 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <php>
+        <env name="APP_ENV" value="self-testing"/>
+        <env name="APP_KEY" value="base64:anozbzZkMjNqNzBvNW1obHp2MGRvaXJjeWdpZDlmcW8="/>
+        <env name="DB_CONNECTION" value="testing"/>
+    </php>
 </phpunit>
