--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,18 @@
             "role": "Developer"
         }
     ],
-    "require": {        
-        "php": "^8.1",
+    "require": {
+        "php": "^8.2",
         "filament/filament": "^4.0",
         "filament/upgrade": "^4.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "orchestra/testbench": "^9.14",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpstan/extension-installer": "^1.1"
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-arch": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "larastan/larastan": "^3.6"
     },
     "autoload": {
         "psr-4": {
